2012-09-15  Joseph Myers  <joseph@codesourcery.com>

	PR c/54103
	* c-typeck.c (build_unary_op): Pass original argument of
	TRUTH_NOT_EXPR to c_objc_common_truthvalue_conversion, then remove
	any C_MAYBE_CONST_EXPR, if it has integer operands.
	(build_binary_op): Pass original arguments of TRUTH_ANDIF_EXPR,
	TRUTH_ORIF_EXPR, TRUTH_AND_EXPR, TRUTH_OR_EXPR and TRUTH_XOR_EXPR
	to c_objc_common_truthvalue_conversion, then remove any
	C_MAYBE_CONST_EXPR, if they have integer operands.  Use
	c_objc_common_truthvalue_conversion not
	c_common_truthvalue_conversion.
	(c_objc_common_truthvalue_conversion): Build NE_EXPR directly and
	call note_integer_operands for arguments with integer operands
	that are not integer constants.

2012-09-14  Wei Guozhi  <carrot@google.com>

	Backport from 2012-02-13 mainline r184169.

	* cselib.c (expand_loc): Return sp, fp, hfp or cfa base reg right
	away if seen.

2012-09-10  Georg-Johann Lay  <avr@gjlay.de>

	Backport from 2012-09-10 mainline r191132.
	
	PR target/54536
	* config/avr/avr-devices.c (avr_mcu_types["at90usb1287"]): Set
	.library_name to "usb1287".

2012-09-10  Markus Trippelsdorf  <markus@trippelsdorf.de>

	PR middle-end/54515
	* tree-sra.c (disqualify_base_of_expr): Check for possible
	NULL_TREE returned by get_base_address()

2012-09-05  Bin Cheng  <bin.cheng@arm.com>

	Backport from 2012-09-04 mainline r190919

	PR target/45070
	* config/arm/arm.c (thumb1_extra_regs_pushed): Handle return value of
	size less than 4 bytes by using macro ARM_NUM_INTS.
	(thumb1_unexpanded_epilogue): Use macro ARM_NUM_INTS.

2012-09-04  Senthil Kumar Selvaraj  <senthil_kumar.selvaraj@atmel.com>

	Backport from 2012-09-04 mainline r190914

	PR target/54220
	* config/avr/avr.c (TARGET_ALLOCATE_STACK_SLOTS_FOR_ARGS): New
	define to...
	(avr_allocate_stack_slots_for_args): ...this new static function.

2012-09-03  H.J. Lu  <hongjiu.lu@intel.com>

	Backported from mainline
	2012-08-23  H.J. Lu  <hongjiu.lu@intel.com>

	PR driver/54335