@@ -1,5 +1,12 @@
 2012-09-15  Joseph Myers  <joseph@codesourcery.com>
 
+	PR c/54552
+	* c-typeck.c (c_cast_expr): When casting to a type requiring
+	C_MAYBE_CONST_EXPR to be created, pass the inner expression to
+	c_fully_fold first.
+
+2012-09-15  Joseph Myers  <joseph@codesourcery.com>
+
 	PR c/54103
 	* c-typeck.c (build_unary_op): Pass original argument of
 	TRUTH_NOT_EXPR to c_objc_common_truthvalue_conversion, then remove
